--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ project(${NAME})
 
 set(PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../)
 
-set(CMAKE_CXX_FLAGS "-Wall --std=c++14 -O3")
-
+if (UNIX)
+	set(CMAKE_CXX_FLAGS "-Wall --std=c++14 -O3")
+endif()
 
 file(GLOB ${NAME}_HEADERS *.hpp)
 
